--- a/view/enen/front-view/index.jade
+++ b/view/enen/front-view/index.jade
@@ -1,7 +1,7 @@
 .row 
     .description
-        最出色的
+        | 最出色的
         span 前端
-        创作平台
+        | 创作平台
         br
         small 敬请期待
