--- a/client/gallery/common.less
+++ b/client/gallery/common.less
@@ -3,15 +3,15 @@
 @import (less) "/bower_components/bootstrap/dist/css/bootstrap.css";
 
 @color1: #F14E42;
-@color2: #6F6F70;
-@color3: #F4F4F5;
+@color2: #69A1FF;
+@color3: #6F6F70;
 
 @font: "Hiragino Sans GB","Hiragino Sans GB W3","Microsoft YaHei",tahoma,arial,simsun;
 
 body{
     margin: 0;
     font-size: 12px;
-    color: @color2;
+    color: @color3;
 }
 canvas{
     display: block;
