--- a/client/gallery/markdown.less
+++ b/client/gallery/markdown.less
@@ -3,17 +3,17 @@
 .markdown{
 
     font-family: "Arial", "Microsoft YaHei", "Tahoma";
-    padding: 20px 10px;
+    padding: 20px 35px;
     line-height: 20px;
     font-size: 14px;
 
     h1, h2, h3{
-        margin: 20px -20px 20px -23px;
+        margin: 20px -10px 20px -13px;
     }
 
     h1{
         font-size: 22px;
-        color: #505050;
+        color: #404040;
         padding: 12px 20px;
     }
 
@@ -21,7 +21,7 @@
         font-size: 20px;
         font-weight: bold;
         padding: 10px 20px;
-        color: #606060;
+        color: #505050;
         border-bottom: 4px solid @color3;
     }
 
@@ -30,14 +30,14 @@
         font-weight: normal;
         padding: 8px 20px 8px 21px;
         line-height: 18px;
-        color: #606060;
-        border-left: 2px solid @color2;
+        color: #505050;
+        border-left: 2px solid @color3;
         background: #F9F9F9;
 
         &:hover{
             border-left: 4px solid @color1;
             padding-left: 20px;
-            margin-left: -24px;
+            margin-left: -14px;
         }
     }
 
@@ -49,7 +49,7 @@
             padding: 2px 8px;
             background: #FFF;
             border-radius: 2px;
-            border: 1px solid #CCC;
+            border: 1px solid #E0E0E0;
             color: #333;
         }
     }
@@ -72,7 +72,7 @@
     blockquote{
         padding: 0 0 0 10px;
         margin: 0 0 20px;
-        border-left: 3px solid #CCC;
+        border-left: 3px solid #E0E0E0;
     }
 
     table{
@@ -92,7 +92,7 @@
 
     .CodeMirror {
         border-radius: 2px;
-        border: 1px solid #CCC;
+        border: 1px solid #E0E0E0;
         line-height: 1.5em;
         font-size: .85em;
         font-family: "Monaco", "Andale Mono", "Lucida Console", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
@@ -110,7 +110,7 @@
         }
     }
     .CodeMirror-code{
-        padding: 10px 0;
+        // padding: 10px 0;
     }
 
     .CodeMirror-gutter-elt {
